--- a/References/references.bib
+++ b/References/references.bib
@@ -14,13 +14,147 @@
 // Images
 // ***********
 
-@online{Image_ThreeGorgesDam,
+@misc{Image_ThreeGorgesDam,
 	author = {{Wikipedia, the free encyclopedia}},
 	title = {{Three} {Gorges} {Dam}},
-	month = {September}
-	year = {2009},
-	howpublished = {\url{https://upload.wikimedia.org/wikipedia/commons/a/ab/ThreeGorgesDam-China2009.jpg}}
+	howpublished = {\url{https://commons.wikimedia.org/wiki/File:ThreeGorgesDam-China2009.jpg}}
+	
 }
+
+@misc{Image_WindFarm,
+	author = {{Wikipedia, the free encyclopedia}},
+	title = {},
+	howpublished = {\url{https://commons.wikimedia.org/wiki/File:Wind_turbines_in_southern_California_2016.jpg}}
+}
+
+@misc{Image_SolarFarm,
+	author = {{Wikipedia, the free encyclopedia}},
+	title = {Solar power plant (Serpa, Portugal)},
+	howpublished = {\url{https://commons.wikimedia.org/wiki/File:SolarPowerPlantSerpa.jpg}}
+}
+
+@misc{Image_Sun,
+	author = {{Wikipedia, the free encyclopedia}},
+	title = {Sun as seen by {Atmospheric} {Imaging} {Assembly} of {NASA's} {Solar} {Dynamics} {Observatory}},
+	howpublished = {\url{https://commons.wikimedia.org/wiki/File:The_Sun_by_the_Atmospheric_Imaging_Assembly_of_NASA\%27s_Solar_Dynamics_Observatory_-_20100819.jpg}}
+}
+
+@misc{Image_MSTR,
+	title = {Reactor {Info}},
+	howpublished = {\url{https://nuclear.mst.edu/research/reactor/}},
+	language = {en-US},
+	urldate = {2020-11-19},
+	journal = {Missouri S\&T},
+	author = {Missouri University of Science {and} Technology},
+}
+
+@article{sato1990thermochemistry,
+  title={Thermochemistry of the formation of fossil fuels},
+  author={Sato, Motoaki},
+  journal={Fluid-Mineral Interactions: A Tribute to HP Eugster},
+  volume={2},
+  pages={271--283},
+  year={1990},
+  publisher={Geological Society of America}
+}
+
+@article{owidenergy,
+    author = {Hannah Ritchie},
+    title = {Energy},
+    journal = {Our World in Data},
+    year = {2014},
+    note = {https://ourworldindata.org/energy}
+}
+
+@article{owidQoL,
+    author = {Max Roser},
+    title = {The short history of global living conditions and why it matters that we know it},
+    journal = {Our World in Data},
+    year = {2019},
+    note = {https://ourworldindata.org/a-history-of-global-living-conditions-in-5-charts}
+}
+
+@article{owidfossilfuels,
+    author = {Hannah Ritchie},
+    title = {Fossil Fuels},
+    journal = {Our World in Data},
+    year = {2017},
+    note = {https://ourworldindata.org/fossil-fuels}
+}
+
+@article{woolfson_origin_2000,
+	title = {The origin and evolution of the solar system},
+	volume = {41},
+	issn = {1468-4004, 1366-8781},
+	url = {https://academic.oup.com/astrogeo/article-lookup/doi/10.1046/j.1468-4004.2000.00012.x},
+	doi = {10.1046/j.1468-4004.2000.00012.x},
+	language = {en},
+	number = {1},
+	urldate = {2020-11-19},
+	journal = {Astronomy \& Geophysics},
+	author = {Woolfson, Michael},
+	month = feb,
+	year = {2000},
+	pages = {1.12--1.19},
+}
+
+@inproceedings{tamm1937coherent,
+  title={Coherent radiation of fast electrons in a medium},
+  author={Tamm, IE and Frank, IM},
+  booktitle={Dokl. Akad. Nauk SSSR},
+  volume={14},
+  number={3},
+  pages={107--112},
+  year={1937}
+}
+
+@misc{noauthor_awea_2010,
+	title = {{AWEA} - {Projects}},
+	howpublished = {\url{https://web.archive.org/web/20100807010520/http://www.awea.org/projects/Projects.aspx?s=California}},
+	urldate = {2020-11-19},
+	month = aug,
+	year = {2010},
+}
+
+@article{noauthor_portugal_2006,
+    author = {BBC},
+	title = {Portugal starts huge solar plant},
+	howpublished = {\url{http://news.bbc.co.uk/2/hi/europe/5056012.stm}},
+	abstract = {Construction work begins in southern Portugal on what is set to be the world's largest solar power station.},
+	language = {en-GB},
+	urldate = {2020-11-19},
+	month = jun,
+	year = {2006},
+	keywords = {BBC, News, BBC News, News online, World, Uk, International, Foreign, British, Online, Service},
+}
+
+
+@book{cleveland_handbook_2014,
+	title = {Handbook of energy, {Volume} {II}, {Chronologies}, top ten lists, and word clouds},
+	isbn = {9780124170193 9780124170131},
+	language = {English},
+	author = {Cleveland, Cutler J and Morris, Christopher G},
+	year = {2014},
+	note = {OCLC: 953128723},
+}
+
+@book{ehrlich_renewable_2014,
+	address = {Hoboken},
+	title = {Renewable {Energy}: a {First} {Course}.},
+	isbn = {9781466599444},
+	shorttitle = {Renewable {Energy}},
+	abstract = {Front Cover; Contents; Preface; Acknowledgments; Author; Chapter 1: Introduction; Chapter 2: Fossil Fuels; Chapter 3: Nuclear Power : Basic Science; Chapter 4: Nuclear Power : Technology; Chapter 5: Biofuels; Chapter 6: Geothermal Energy; Chapter 7: Wind Power; Chapter 8: Hydropower; Chapter 9: Solar Radiation and Earth's Climate; Chapter 10: Solar Thermal; Chapter 11: Photovoltaics; Chapter 12: Energy Conservation and Efficiency; Chapter 13: Energy Storage and Transmission; Chapter 14: Climate and Energy: Policy, Politics, and Public Opinion; Appendix; Back Cover. IntroductionWhy Another Book on Energy?Why Is Energy So Important to Society?Exactly What Is Energy?Might There Be Some New Forms of Energy Not Yet Known?What Are the Units of Energy?Laws of ThermodynamicsWhat Is an Energy Source?What Exactly Is the World's Energy Problem?How Is Green or Renewable Energy Defined?Why Has Renewable Energy and Conservation Been Neglected Until Fairly Recently?Does Energy Efficiency Really Matter?Which Renewable Energy Sources Hold the Greatest Promise?Who Are the World Leaders in Renewable Energy?What Is Our Likely Energy Future?Complexities in Charting the Best.},
+	language = {English},
+	publisher = {CRC Press},
+	author = {Ehrlich, Robert},
+	year = {2014},
+	note = {OCLC: 910558618},
+}
+
+
+
+
+
 
 // ******
 // Misc *
